--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,109 @@
     <title>URL Shortening</title>
 </head>
 <body>
-    <div class="wrapper">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
+    <header>
+        <nav>
+            <h2>Shortly</h2>
+            <ul>
+                <li><a href="javascript:void(0)">Features</a></li>
+                <li><a href="javascript:void(0)">Pricing</a></li>
+                <li><a href="javascript:void(0)">Resources</a></li>
+                <li><a href="javascript:void(0)">Login</a></li>
+                <li><a href="javascript:void(0)" class="btn  btn--pill  btn--small">Sign Up</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        <h1>More than just shorter links</h1>
+        <p>Build your brand's recognition and get detailed insights on how your links are performing.</p>
+        <p><a href="javascript:void(0)" class="btn  btn--pill">Get Started</a></p>
+    </section>
+    <section>
+        <form action="/">
+            <div>
+                <label for="link" class="sr-only">Link:</label>
+                <input type="text" value="link" id="link" aria-required="true" placeholder="Shorten a link here..."/>
+            </div>
+            <div>
+                <button type="submit" class="btn">Shorten It!</button>
+            </div>
+        </form>
+    </section>
+    <section>
+        <h2>Advanced Statistics</h2>
+        <p>Track how your links are performing across the web with our advanced statistics dashboard.</p>
+        <div>
+            <div>
+                <h2>Brand Recognition</h2>
+                <p>Boost your brand recognition with each click. Generic links don't mean a thing. Branded links help
+                    instil confidence in your content.</p>
+            </div>
+            <div>
+                <h2>Detailed Records</h2>
+                <p>Gain insights into who is clicking your links. Knowing when and where people engage with your
+                    content helps inform better decisions.</p>
+            </div>
+            <div>
+                <h2>Fully Customizable</h2>
+                <p>Improve brand awareness and content discoverability through customizable links, supercharging
+                    audience engagement.</p>
+            </div>
+        </div>
+    </section>
+    <section>
+        <h2>Boost your links today</h2>
+        <a href="javascript:void(0)" class="btn  btn--pill">Get Started</a>
+    </section>
+    <section>
+        <h1><b>Styles</b></h1>
+        <h1>Heading One <b>Bold</b></h1>
+        <h2>Heading Two <b>Bold</b></h2>
+        <h3>Heading Three <b>Bold</b></h3>
+        <h4>Heading Four <b>Bold</b></h4>
+        <h5>Heading Five <b>Bold</b></h5>
+        <h6>Heading Six <b>Bold</b></h6>
+        <p>Paragraph <b>Bold</b></p>
+        <p>
+            <a class="btn" href="javascript:void(0)">Button</a>
+            <a class="btn  btn--pill" href="javascript:void(0)">Get Started</a>
+            <a class="btn  btn--pill  btn--small" href="javascript:void(0)">Sign Up</a>
+        </p>
+    </section>
+    <footer>
+        <h2>Shortly</h2>
+        <div>
+            <h5>Features</h5>
+            <ul>
+                <li><a href="javascript:void(0)">Link Shortening</a></li>
+                <li><a href="javascript:void(0)">Branded Links</a></li>
+                <li><a href="javascript:void(0)">Analytics</a></li>
+            </ul>
+        </div>
+        <div>
+            <h5>Resources</h5>
+            <ul>
+                <li><a href="javascript:void(0)">Blog</a></li>
+                <li><a href="javascript:void(0)">Developers</a></li>
+                <li><a href="javascript:void(0)">Support</a></li>
+            </ul>
+        </div>
+        <div>
+            <h5>Company</h5>
+            <ul>
+                <li><a href="javascript:void(0)">About</a></li>
+                <li><a href="javascript:void(0)">Our Team</a></li>
+                <li><a href="javascript:void(0)">Careers</a></li>
+                <li><a href="javascript:void(0)">Contact</a></li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <li><a href="javascript:void(0)">Facebook</a></li>
+                <li><a href="javascript:void(0)">Twitter</a></li>
+                <li><a href="javascript:void(0)">Pinterest</a></li>
+                <li><a href="javascript:void(0)">Instagram</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
