--- a/src/index.html
+++ b/src/index.html
@@ -7,108 +7,135 @@
     <title>URL Shortening</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <h2>Shortly</h2>
-            <ul>
-                <li><a href="javascript:void(0)">Features</a></li>
-                <li><a href="javascript:void(0)">Pricing</a></li>
-                <li><a href="javascript:void(0)">Resources</a></li>
-                <li><a href="javascript:void(0)">Login</a></li>
-                <li><a href="javascript:void(0)" class="btn  btn--pill  btn--small">Sign Up</a></li>
-            </ul>
-        </nav>
+    <header class="header-nav">
+        <div class="wrapper">
+            <nav class="header-nav__inner">
+                <div class="header-nav__brand">
+                    <img src="./assets/images/logo.svg" alt="Shortly Logo">
+                    <button class="btn-menu  js-btn-menu" type="button" aria-label="Menu" aria-controls="navigation">
+                        <div class="btn-menu__icon">
+                            <div class="btn-menu__line btn-menu__line--1"></div>
+                            <div class="btn-menu__line btn-menu__line--2"></div>
+                            <div class="btn-menu__line btn-menu__line--3"></div>
+                        </div>
+                    </button>
+                </div>
+                <div class="header-nav__links  js-header-nav-links" role="navigation">
+                    <ul>
+                        <li><a href="javascript:void(0)">Features</a></li>
+                        <li><a href="javascript:void(0)">Pricing</a></li>
+                        <li><a href="javascript:void(0)">Resources</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="javascript:void(0)">Login</a></li>
+                        <li><a href="javascript:void(0)" class="btn  btn--pill  btn--small">Sign Up</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </header>
     <section>
-        <h1>More than just shorter links</h1>
-        <p>Build your brand's recognition and get detailed insights on how your links are performing.</p>
-        <p><a href="javascript:void(0)" class="btn  btn--pill">Get Started</a></p>
+        <div class="wrapper">
+            <h1>More than just shorter links</h1>
+            <p>Build your brand's recognition and get detailed insights on how your links are performing.</p>
+            <p><a href="javascript:void(0)" class="btn  btn--pill">Get Started</a></p>
+        </div>
     </section>
     <section>
-        <form action="/">
-            <div>
-                <label for="link" class="sr-only">Link:</label>
-                <input type="text" value="link" id="link" aria-required="true" placeholder="Shorten a link here..."/>
-            </div>
-            <div>
-                <button type="submit" class="btn">Shorten It!</button>
-            </div>
-        </form>
+        <div class="wrapper">
+            <form action="/">
+                <div>
+                    <label for="link" class="sr-only">Link:</label>
+                    <input type="text" value="link" id="link" aria-required="true" placeholder="Shorten a link here..."/>
+                </div>
+                <div>
+                    <button type="submit" class="btn">Shorten It!</button>
+                </div>
+            </form>
+        </div>
     </section>
     <section>
-        <h2>Advanced Statistics</h2>
-        <p>Track how your links are performing across the web with our advanced statistics dashboard.</p>
-        <div>
+        <div class="wrapper">
+            <h2>Advanced Statistics</h2>
+            <p>Track how your links are performing across the web with our advanced statistics dashboard.</p>
             <div>
-                <h2>Brand Recognition</h2>
-                <p>Boost your brand recognition with each click. Generic links don't mean a thing. Branded links help
-                    instil confidence in your content.</p>
-            </div>
-            <div>
-                <h2>Detailed Records</h2>
-                <p>Gain insights into who is clicking your links. Knowing when and where people engage with your
-                    content helps inform better decisions.</p>
-            </div>
-            <div>
-                <h2>Fully Customizable</h2>
-                <p>Improve brand awareness and content discoverability through customizable links, supercharging
-                    audience engagement.</p>
+                <div>
+                    <h2>Brand Recognition</h2>
+                    <p>Boost your brand recognition with each click. Generic links don't mean a thing. Branded links help
+                        instil confidence in your content.</p>
+                </div>
+                <div>
+                    <h2>Detailed Records</h2>
+                    <p>Gain insights into who is clicking your links. Knowing when and where people engage with your
+                        content helps inform better decisions.</p>
+                </div>
+                <div>
+                    <h2>Fully Customizable</h2>
+                    <p>Improve brand awareness and content discoverability through customizable links, supercharging
+                        audience engagement.</p>
+                </div>
             </div>
         </div>
     </section>
     <section>
-        <h2>Boost your links today</h2>
-        <a href="javascript:void(0)" class="btn  btn--pill">Get Started</a>
+        <div class="wrapper">
+            <h2>Boost your links today</h2>
+            <a href="javascript:void(0)" class="btn  btn--pill">Get Started</a>
+        </div>
     </section>
     <section>
-        <h1><b>Styles</b></h1>
-        <h1>Heading One <b>Bold</b></h1>
-        <h2>Heading Two <b>Bold</b></h2>
-        <h3>Heading Three <b>Bold</b></h3>
-        <h4>Heading Four <b>Bold</b></h4>
-        <h5>Heading Five <b>Bold</b></h5>
-        <h6>Heading Six <b>Bold</b></h6>
-        <p>Paragraph <b>Bold</b></p>
-        <p>
-            <a class="btn" href="javascript:void(0)">Button</a>
-            <a class="btn  btn--pill" href="javascript:void(0)">Get Started</a>
-            <a class="btn  btn--pill  btn--small" href="javascript:void(0)">Sign Up</a>
-        </p>
+        <div class="wrapper">
+            <h1><b>Styles</b></h1>
+            <h1>Heading One <b>Bold</b></h1>
+            <h2>Heading Two <b>Bold</b></h2>
+            <h3>Heading Three <b>Bold</b></h3>
+            <h4>Heading Four <b>Bold</b></h4>
+            <h5>Heading Five <b>Bold</b></h5>
+            <h6>Heading Six <b>Bold</b></h6>
+            <p>Paragraph <b>Bold</b></p>
+            <p>
+                <a class="btn" href="javascript:void(0)">Button</a>
+                <a class="btn  btn--pill" href="javascript:void(0)">Get Started</a>
+                <a class="btn  btn--pill  btn--small" href="javascript:void(0)">Sign Up</a>
+            </p>
+        </div>
     </section>
     <footer>
-        <h2>Shortly</h2>
-        <div>
-            <h5>Features</h5>
-            <ul>
-                <li><a href="javascript:void(0)">Link Shortening</a></li>
-                <li><a href="javascript:void(0)">Branded Links</a></li>
-                <li><a href="javascript:void(0)">Analytics</a></li>
-            </ul>
-        </div>
-        <div>
-            <h5>Resources</h5>
-            <ul>
-                <li><a href="javascript:void(0)">Blog</a></li>
-                <li><a href="javascript:void(0)">Developers</a></li>
-                <li><a href="javascript:void(0)">Support</a></li>
-            </ul>
-        </div>
-        <div>
-            <h5>Company</h5>
-            <ul>
-                <li><a href="javascript:void(0)">About</a></li>
-                <li><a href="javascript:void(0)">Our Team</a></li>
-                <li><a href="javascript:void(0)">Careers</a></li>
-                <li><a href="javascript:void(0)">Contact</a></li>
-            </ul>
-        </div>
-        <div>
-            <ul>
-                <li><a href="javascript:void(0)">Facebook</a></li>
-                <li><a href="javascript:void(0)">Twitter</a></li>
-                <li><a href="javascript:void(0)">Pinterest</a></li>
-                <li><a href="javascript:void(0)">Instagram</a></li>
-            </ul>
+        <div class="wrapper">
+            <h2>Shortly</h2>
+            <div>
+                <h5>Features</h5>
+                <ul>
+                    <li><a href="javascript:void(0)">Link Shortening</a></li>
+                    <li><a href="javascript:void(0)">Branded Links</a></li>
+                    <li><a href="javascript:void(0)">Analytics</a></li>
+                </ul>
+            </div>
+            <div>
+                <h5>Resources</h5>
+                <ul>
+                    <li><a href="javascript:void(0)">Blog</a></li>
+                    <li><a href="javascript:void(0)">Developers</a></li>
+                    <li><a href="javascript:void(0)">Support</a></li>
+                </ul>
+            </div>
+            <div>
+                <h5>Company</h5>
+                <ul>
+                    <li><a href="javascript:void(0)">About</a></li>
+                    <li><a href="javascript:void(0)">Our Team</a></li>
+                    <li><a href="javascript:void(0)">Careers</a></li>
+                    <li><a href="javascript:void(0)">Contact</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li><a href="javascript:void(0)">Facebook</a></li>
+                    <li><a href="javascript:void(0)">Twitter</a></li>
+                    <li><a href="javascript:void(0)">Pinterest</a></li>
+                    <li><a href="javascript:void(0)">Instagram</a></li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
