--- a/src/index.html
+++ b/src/index.html
@@ -34,11 +34,18 @@
             </nav>
         </div>
     </header>
-    <section>
+    <section class="overflow-hidden">
         <div class="wrapper">
-            <h1>More than just shorter links</h1>
-            <p>Build your brand's recognition and get detailed insights on how your links are performing.</p>
-            <p><a href="javascript:void(0)" class="btn  btn--pill">Get Started</a></p>
+            <div class="hero">
+                <div class="hero__image">
+                    <img src="./assets/images/illustration-working.svg" alt="Working Illustration">
+                </div>
+                <div class="hero__content">
+                    <h1>More than just shorter links</h1>
+                    <p>Build your brand's recognition and get detailed insights on how your links are performing.</p>
+                    <a href="javascript:void(0)" class="btn  btn--pill">Get Started</a>
+                </div>
+            </div>
         </div>
     </section>
     <section>
