--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
             </nav>
         </div>
     </header>
-    <section class="overflow-hidden">
+    <section class="section  overflow-hidden">
         <div class="wrapper">
             <div class="hero">
                 <div class="hero__image">
@@ -48,46 +48,47 @@
             </div>
         </div>
     </section>
-    <section>
+    <section class="section  section--light">
         <div class="wrapper">
-            <form action="/">
+            <div class="block">
+                <form action="/">
+                    <div>
+                        <label for="link" class="sr-only">Link:</label>
+                        <input type="text" value="link" id="link" aria-required="true" placeholder="Shorten a link here..."/>
+                    </div>
+                    <div>
+                        <button type="submit" class="btn">Shorten It!</button>
+                    </div>
+                </form>
+
+                <h2>Advanced Statistics</h2>
+                <p>Track how your links are performing across the web with our advanced statistics dashboard.</p>
                 <div>
-                    <label for="link" class="sr-only">Link:</label>
-                    <input type="text" value="link" id="link" aria-required="true" placeholder="Shorten a link here..."/>
-                </div>
-                <div>
-                    <button type="submit" class="btn">Shorten It!</button>
-                </div>
-            </form>
-        </div>
-    </section>
-    <section>
-        <div class="wrapper">
-            <h2>Advanced Statistics</h2>
-            <p>Track how your links are performing across the web with our advanced statistics dashboard.</p>
-            <div>
-                <div>
-                    <h2>Brand Recognition</h2>
-                    <p>Boost your brand recognition with each click. Generic links don't mean a thing. Branded links help
-                        instil confidence in your content.</p>
-                </div>
-                <div>
-                    <h2>Detailed Records</h2>
-                    <p>Gain insights into who is clicking your links. Knowing when and where people engage with your
-                        content helps inform better decisions.</p>
-                </div>
-                <div>
-                    <h2>Fully Customizable</h2>
-                    <p>Improve brand awareness and content discoverability through customizable links, supercharging
-                        audience engagement.</p>
+                    <div>
+                        <h2>Brand Recognition</h2>
+                        <p>Boost your brand recognition with each click. Generic links don't mean a thing. Branded links help
+                            instil confidence in your content.</p>
+                    </div>
+                    <div>
+                        <h2>Detailed Records</h2>
+                        <p>Gain insights into who is clicking your links. Knowing when and where people engage with your
+                            content helps inform better decisions.</p>
+                    </div>
+                    <div>
+                        <h2>Fully Customizable</h2>
+                        <p>Improve brand awareness and content discoverability through customizable links, supercharging
+                            audience engagement.</p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <section>
+    <section class="section  section--medium">
         <div class="wrapper">
-            <h2>Boost your links today</h2>
-            <a href="javascript:void(0)" class="btn  btn--pill">Get Started</a>
+            <div class="block">
+                <h2>Boost your links today</h2>
+                <a href="javascript:void(0)" class="btn  btn--pill">Get Started</a>
+            </div>
         </div>
     </section>
     <section>
@@ -108,42 +109,46 @@
         </div>
     </section>
     <footer>
-        <div class="wrapper">
-            <h2>Shortly</h2>
-            <div>
-                <h5>Features</h5>
-                <ul>
-                    <li><a href="javascript:void(0)">Link Shortening</a></li>
-                    <li><a href="javascript:void(0)">Branded Links</a></li>
-                    <li><a href="javascript:void(0)">Analytics</a></li>
-                </ul>
+        <section class="section  section--dark">
+            <div class="wrapper">
+                <div class="block">
+                    <h2>Shortly</h2>
+                    <div>
+                        <h5>Features</h5>
+                        <ul>
+                            <li><a href="javascript:void(0)">Link Shortening</a></li>
+                            <li><a href="javascript:void(0)">Branded Links</a></li>
+                            <li><a href="javascript:void(0)">Analytics</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h5>Resources</h5>
+                        <ul>
+                            <li><a href="javascript:void(0)">Blog</a></li>
+                            <li><a href="javascript:void(0)">Developers</a></li>
+                            <li><a href="javascript:void(0)">Support</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h5>Company</h5>
+                        <ul>
+                            <li><a href="javascript:void(0)">About</a></li>
+                            <li><a href="javascript:void(0)">Our Team</a></li>
+                            <li><a href="javascript:void(0)">Careers</a></li>
+                            <li><a href="javascript:void(0)">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <ul>
+                            <li><a href="javascript:void(0)">Facebook</a></li>
+                            <li><a href="javascript:void(0)">Twitter</a></li>
+                            <li><a href="javascript:void(0)">Pinterest</a></li>
+                            <li><a href="javascript:void(0)">Instagram</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <div>
-                <h5>Resources</h5>
-                <ul>
-                    <li><a href="javascript:void(0)">Blog</a></li>
-                    <li><a href="javascript:void(0)">Developers</a></li>
-                    <li><a href="javascript:void(0)">Support</a></li>
-                </ul>
-            </div>
-            <div>
-                <h5>Company</h5>
-                <ul>
-                    <li><a href="javascript:void(0)">About</a></li>
-                    <li><a href="javascript:void(0)">Our Team</a></li>
-                    <li><a href="javascript:void(0)">Careers</a></li>
-                    <li><a href="javascript:void(0)">Contact</a></li>
-                </ul>
-            </div>
-            <div>
-                <ul>
-                    <li><a href="javascript:void(0)">Facebook</a></li>
-                    <li><a href="javascript:void(0)">Twitter</a></li>
-                    <li><a href="javascript:void(0)">Pinterest</a></li>
-                    <li><a href="javascript:void(0)">Instagram</a></li>
-                </ul>
-            </div>
-        </div>
+        </section>
     </footer>
 </body>
 </html>
