Persist url to api and display new short url
Also refactor code on index.js

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
                 <form class="url-shortener__form  js-form">
                     <div class="url-shortener__control">
                         <label for="fullUrl" class="sr-only">Link:</label>
-                        <input class="form-control"
+                        <input class="form-control  js-form-full-url"
                                required
                                type="url"
                                id="fullUrl"
@@ -70,11 +70,8 @@
                     </div>
                 </form>
             </div>
-        </div>
-    </section>
-    <section class="section  section--light">
-        <div class="wrapper">
-            <div class="block  block--double">
+            <div class="url-list  js-url-list-view"></div>
+            <div class="block  block--double  block--no-top">
                 <h2>Advanced Statistics</h2>
                 <p>Track how your links are performing across the web with our advanced statistics dashboard.</p>
                 <div>
