Styles chained cards and tweaks typography

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="hero__content">
                         <h1>More than just shorter links</h1>
-                        <p>Build your brand's recognition and get detailed insights on how your links are performing.</p>
+                        <h5 class="text-muted">Build your brand's recognition and get detailed insights on how your links are performing.</p>
                         <a href="javascript:void(0)" class="btn  btn--pill">Get Started</a>
                     </div>
                 </div>
@@ -71,23 +71,40 @@
                 </form>
             </div>
             <div class="url-list  js-url-list-view"></div>
+        </div>
+        <div class="wrapper  wrapper--narrow">
+            <div class="block">
+                <div class="text-center">
+                    <h2><b>Advanced Statistics</b></h2>
+                    <h6 class="text-muted">Track how your links are performing across the web with our advanced statistics dashboard.</p>
+                </div>
+            </div>
+        </div>
+        <div class="wrapper">
             <div class="block  block--double  block--no-top">
-                <h2>Advanced Statistics</h2>
-                <p>Track how your links are performing across the web with our advanced statistics dashboard.</p>
-                <div>
-                    <div>
-                        <h2>Brand Recognition</h2>
-                        <p>Boost your brand recognition with each click. Generic links don't mean a thing. Branded links help
+                <div class="chained-cards">
+                    <div class="card">
+                        <div class="card__icon">
+                            <img src="./assets/images/icon-brand-recognition.svg" alt="Brand Recognition">
+                        </div>
+                        <h5><b>Brand Recognition</b></h5>
+                        <p class="card__text">Boost your brand recognition with each click. Generic links don't mean a thing. Branded links help
                             instil confidence in your content.</p>
                     </div>
-                    <div>
-                        <h2>Detailed Records</h2>
-                        <p>Gain insights into who is clicking your links. Knowing when and where people engage with your
+                    <div class="card">
+                        <div class="card__icon">
+                            <img src="./assets/images/icon-detailed-records.svg" alt="Detailed Records">
+                        </div>
+                        <h5><b>Detailed Records</b></h5>
+                        <p class="card__text">Gain insights into who is clicking your links. Knowing when and where people engage with your
                             content helps inform better decisions.</p>
                     </div>
-                    <div>
-                        <h2>Fully Customizable</h2>
-                        <p>Improve brand awareness and content discoverability through customizable links, supercharging
+                    <div class="card">
+                        <div class="card__icon">
+                            <img src="./assets/images/icon-fully-customizable.svg" alt="Fully Customizable">
+                        </div>
+                        <h5><b>Fully Customizable</b></h5>
+                        <p class="card__text">Improve brand awareness and content discoverability through customizable links, supercharging
                             audience engagement.</p>
                     </div>
                 </div>
