Renames section modifiers to improve readability

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
             </div>
         </div>
     </section>
-    <section class="section  section--light">
+    <section class="section  section--bg-light">
         <div class="wrapper">
             <div class="url-shortener">
                 <form class="url-shortener__form  js-form">
@@ -111,7 +111,7 @@
             </div>
         </div>
     </section>
-    <section class="section  section--medium">
+    <section class="section  section--bg-medium">
         <div class="wrapper">
             <div class="block">
                 <h2>Boost your links today</h2>
@@ -137,7 +137,7 @@
         </div>
     </section>
     <footer>
-        <section class="section  section--dark">
+        <section class="section  section--bg-dark">
             <div class="wrapper">
                 <div class="block">
                     <h2>Shortly</h2>
