Styles stripe component

--- a/src/index.html
+++ b/src/index.html
@@ -112,10 +112,12 @@
         </div>
     </section>
     <section class="section  section--bg-medium">
-        <div class="wrapper">
-            <div class="block">
-                <h2>Boost your links today</h2>
-                <a href="javascript:void(0)" class="btn  btn--pill">Get Started</a>
+        <div class="stripe  text-center">
+            <div class="wrapper">
+                <div class="block">
+                    <h2 class="text-white"><b>Boost your links today</b></h2>
+                    <a href="javascript:void(0)" class="btn  btn--pill">Get Started</a>
+                </div>
             </div>
         </div>
     </section>
