Adds responsive rules to typography

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
             <div class="block">
                 <div class="text-center">
                     <h2><b>Advanced Statistics</b></h2>
-                    <h6 class="text-muted">Track how your links are performing across the web with our advanced statistics dashboard.</p>
+                    <p class="text-muted">Track how your links are performing across the web with our advanced statistics dashboard.</p>
                 </div>
             </div>
         </div>
