--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <div class="wrapper">
             <nav class="header-nav__inner">
                 <div class="header-nav__brand">
-                    <img src="./assets/images/logo.svg" alt="Shortly Logo">
+                    <img src="./assets/images/logo.svg" alt="Shortly">
                     <button class="btn-menu  js-btn-menu" type="button" aria-label="Menu" aria-controls="navigation">
                         <div class="btn-menu__icon">
                             <div class="btn-menu__line btn-menu__line--1"></div>
@@ -119,6 +119,7 @@
             </div>
         </div>
     </section>
+    <!--
     <section>
         <div class="wrapper">
             <h1><b>Styles</b></h1>
@@ -136,29 +137,32 @@
             </p>
         </div>
     </section>
-    <footer>
+    -->
+    <footer class="footer">
         <section class="section  section--bg-dark">
             <div class="wrapper">
-                <div class="block">
-                    <h2>Shortly</h2>
-                    <div>
-                        <h5>Features</h5>
+                <div class="footer__container">
+                    <div class="footer__block">
+                        <img class="footer__logo" src="./assets/images/logo-white.svg" alt="Shortly">
+                    </div>
+                    <div class="footer__block">
+                        <h6 class="text-white"><b>Features</b></h6>
                         <ul>
                             <li><a href="javascript:void(0)">Link Shortening</a></li>
                             <li><a href="javascript:void(0)">Branded Links</a></li>
                             <li><a href="javascript:void(0)">Analytics</a></li>
                         </ul>
                     </div>
-                    <div>
-                        <h5>Resources</h5>
+                    <div class="footer__block">
+                        <h6 class="text-white"><b>Resources</b></h6>
                         <ul>
                             <li><a href="javascript:void(0)">Blog</a></li>
                             <li><a href="javascript:void(0)">Developers</a></li>
                             <li><a href="javascript:void(0)">Support</a></li>
                         </ul>
                     </div>
-                    <div>
-                        <h5>Company</h5>
+                    <div class="footer__block">
+                        <h6 class="text-white"><b>Company</b></h6>
                         <ul>
                             <li><a href="javascript:void(0)">About</a></li>
                             <li><a href="javascript:void(0)">Our Team</a></li>
@@ -166,12 +170,28 @@
                             <li><a href="javascript:void(0)">Contact</a></li>
                         </ul>
                     </div>
-                    <div>
-                        <ul>
-                            <li><a href="javascript:void(0)">Facebook</a></li>
-                            <li><a href="javascript:void(0)">Twitter</a></li>
-                            <li><a href="javascript:void(0)">Pinterest</a></li>
-                            <li><a href="javascript:void(0)">Instagram</a></li>
+                    <div class="footer__block">
+                        <ul class="footer__social-media">
+                            <li>
+                                <a href="javascript:void(0)">
+                                    <img src="./assets/images/icon-facebook.svg" alt="Facebook" />
+                                </a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0)">
+                                    <img src="./assets/images/icon-twitter.svg" alt="Twitter" />
+                                </a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0)">
+                                    <img src="./assets/images/icon-pinterest.svg" alt="Pinterest" />
+                                </a>
+                            </li>
+                            <li>
+                                <a href="javascript:void(0)">
+                                    <img src="./assets/images/icon-instagram.svg" alt="Instagram" />
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
