Updates GitHub account URL and tweaks template to improve Lighthouse score

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="URL Shortening">
+    <meta name="keywords" content="url save share shorten">
+    <meta name="author" content="Leandro Dal Molin">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>URL Shortening</title>
@@ -26,13 +29,13 @@
                 </div>
                 <div class="header-nav__links  js-header-nav-links" role="navigation">
                     <ul>
-                        <li><a href="javascript:void(0)">Features</a></li>
-                        <li><a href="javascript:void(0)">Pricing</a></li>
-                        <li><a href="javascript:void(0)">Resources</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Resources</a></li>
                     </ul>
                     <ul>
-                        <li><a href="javascript:void(0)">Login</a></li>
-                        <li><a href="javascript:void(0)" class="btn  btn--pill  btn--small">Sign Up</a></li>
+                        <li><a href="#">Login</a></li>
+                        <li><a href="#" class="btn  btn--pill  btn--small">Sign Up</a></li>
                     </ul>
                 </div>
             </nav>
@@ -47,8 +50,8 @@
                     </div>
                     <div class="hero__content">
                         <h1>More than just shorter links</h1>
-                        <h5 class="text-muted">Build your brand's recognition and get detailed insights on how your links are performing.</p>
-                        <a href="javascript:void(0)" class="btn  btn--pill">Get Started</a>
+                        <h5 class="text-muted">Build your brand's recognition and get detailed insights on how your links are performing.</h5>
+                        <a href="#" class="btn  btn--pill">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -130,7 +133,7 @@
         <div class="stripe  text-center">
             <div class="wrapper">
                 <h2 class="text-white"><b>Boost your links today</b></h2>
-                <a href="javascript:void(0)" class="btn  btn--pill">Get Started</a>
+                <a href="#" class="btn  btn--pill">Get Started</a>
             </div>
         </div>
     </section>
@@ -146,9 +149,9 @@
             <h6>Heading Six <b>Bold</b></h6>
             <p>Paragraph <b>Bold</b></p>
             <p>
-                <a class="btn" href="javascript:void(0)">Button</a>
-                <a class="btn  btn--pill" href="javascript:void(0)">Get Started</a>
-                <a class="btn  btn--pill  btn--small" href="javascript:void(0)">Sign Up</a>
+                <a class="btn" href="#">Button</a>
+                <a class="btn  btn--pill" href="#">Get Started</a>
+                <a class="btn  btn--pill  btn--small" href="#">Sign Up</a>
             </p>
         </div>
     </section>
@@ -165,53 +168,57 @@
                     <div class="footer__block">
                         <h6 class="text-white"><b>Features</b></h6>
                         <ul>
-                            <li><a href="javascript:void(0)">Link Shortening</a></li>
-                            <li><a href="javascript:void(0)">Branded Links</a></li>
-                            <li><a href="javascript:void(0)">Analytics</a></li>
+                            <li><a href="#">Link Shortening</a></li>
+                            <li><a href="#">Branded Links</a></li>
+                            <li><a href="#">Analytics</a></li>
                         </ul>
                     </div>
                     <div class="footer__block">
                         <h6 class="text-white"><b>Resources</b></h6>
                         <ul>
-                            <li><a href="javascript:void(0)">Blog</a></li>
-                            <li><a href="javascript:void(0)">Developers</a></li>
-                            <li><a href="javascript:void(0)">Support</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Developers</a></li>
+                            <li><a href="#">Support</a></li>
                         </ul>
                     </div>
                     <div class="footer__block">
                         <h6 class="text-white"><b>Company</b></h6>
                         <ul>
-                            <li><a href="javascript:void(0)">About</a></li>
-                            <li><a href="javascript:void(0)">Our Team</a></li>
-                            <li><a href="javascript:void(0)">Careers</a></li>
-                            <li><a href="javascript:void(0)">Contact</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Our Team</a></li>
+                            <li><a href="#">Careers</a></li>
+                            <li><a href="#">Contact</a></li>
                         </ul>
                     </div>
                     <div class="footer__block">
                         <ul class="footer__social-media">
                             <li>
-                                <a href="javascript:void(0)">
+                                <a href="#">
+                                    <span class="sr-only">Facebook</span>
                                     <svg class="icon">
                                         <use xlink:href="./assets/images/svg-sprite.svg#facebook"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0)">
+                                <a href="#">
+                                    <span class="sr-only">Twitter</span>
                                     <svg class="icon">
                                         <use xlink:href="./assets/images/svg-sprite.svg#twitter"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0)">
+                                <a href="#">
+                                    <span class="sr-only">Pinterest</span>
                                     <svg class="icon">
                                         <use xlink:href="./assets/images/svg-sprite.svg#pinterest"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li>
-                                <a href="javascript:void(0)">
+                                <a href="#">
+                                    <span class="sr-only">Instagram</span>
                                     <svg class="icon">
                                         <use xlink:href="./assets/images/svg-sprite.svg#instagram"></use>
                                     </svg>
